--- a/package.json
+++ b/package.json
@@ -28,8 +28,8 @@
     "terser-webpack-plugin": "^5.3.10",
     "ts-loader": "^9.4.2",
     "typescript": "^5.0.4",
-    "webpack": "^5.81.0",
-    "webpack-cli": "^5.0.2",
+    "webpack": "^5.99.6",
+    "webpack-cli": "^5.1.4",
     "webpack-dev-server": "^4.13.3"
   },
   "description": "My webpack project",
@@ -39,6 +39,7 @@
     "build:prod": "webpack --mode=production --node-env=production",
     "watch": "webpack --watch",
     "start": "webpack serve",
+    "dev": "npm start",
     "lint": "eslint --ext .js,.ts ./src",
     "lint:fix": "npm run lint -- --fix",
     "format": "prettier ./src --write",
